--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ CLIENT_URL=http://localhost:3000
 PORT=8000
 SMTP_USER=nikolai.blashchuk@gmail.com
 SMTP_PASS=dcqr vsur zdtr zlbi
-SECRET_KEY=todosSK
+SECRET_KEY=pizzaNodeJs
